--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@angular/service-worker": "^17.3.4",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "ngx-toastr": "^19.0.0",
