--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-
+              "node_modules/html2pdf.js/dist/html2pdf.bundle.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js"
             ]
           },
