--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@ng-select/ng-select": "^12.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "html2pdf.js": "^0.12.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.22.3",
+    "sweetalert2": "^11.22.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
